# PyMKF

./: .gitignore  CMakeLists.txt  PyMKF.cpp  README.md  pyproject.toml  pytest.ini  requirements.txt  test.py
api/: MAS.py  mas_db_reader.py
docs/: mkdocs.yml
docs/css/: custom.css
docs/docs/: examples.md  index.md  installation.md
docs/docs/development/: contributing.md
docs/docs/user-guide/: core-selection.md
examples/: basic_usage.ipynb  basic_usage_core.ipynb  basic_usage_material.ipynb  buck.ipynb  custom_magnetic.json  custom_magnetic_2.json  test_om.ipynb
examples/mas/: L_1uH_50A_4xE1685.json
src/: advisers.cpp  advisers.h  bobbin.cpp  bobbin.h  common.h  core.cpp  core.h  database.cpp  database.h  losses.cpp  losses.h  module.cpp  plotting.cpp  plotting.h  settings.cpp  settings.h  simulation.cpp  simulation.h  utils.cpp  utils.h  winding.cpp  winding.h  wire.cpp  wire.h
tests/: __init__.py  conftest.py  test.py  test_core.py  test_core_adviser.py  test_inputs.py  test_magnetic_adviser.py  test_winding.py
