[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "PyMKF"
version = "0.9.1"
requires-python = ">=3.8"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
manylinux-pypy_aarch64-image = "manylinux_2_28"
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = "dnf module install -y nodejs:20 && npm --version && npm install -g quicktype@23.0.170"
archs = ["x86_64"]

[tool.cibuildwheel.windows]
before-all = "npm --version && npm install -g quicktype@23.0.170"